<resources>
    <string name="app_name">HCN 1.0</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="defaultmsg">Your Message Please</string>
    <string name="first_screen">First Screen</string>
    <string name="buttonclick">Button</string>
    <string name="second_screen">Your Secret Message is</string>
    <string name="welcome_screen">Welcome to Humber Campus Navigator</string>
    <string name="n01168824">n01168824</string>
    <string name="textview">TextView</string>
    <string name="returnClick">RETURN</string>
    <string name="secretmsg">Secret Message Comes Here</string>
    <string name="passwordstring">Password</string>
    <string name="loginid">LoginID</string>
    <string name="recvr">Receiver</string>
    <string name="location1">Current Location</string>
    <string name="scanRequest">Press this Button to scan the nearest QR code</string>
    <string name="done">DONE</string>

    <string name="activity_2">Activity 2</string>
    <string name="welcome_to_humber_campus_navigation">Welcome to Humber Campus Navigation</string>
    <string name="button">Button</string>
    <string name="button_1">Button 1</string>
    <string name="navigation">Navigation</string>
    <string name="call_security">Call Security</string>
    <string name="call_request">If you want to call security click on the following button:</string>
    <string name="title_activity_show_map">showMap</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

</resources>
