<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="#BDFFF3"
tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/CallSecurity"
        android:layout_marginTop="185dp"
        android:text="@string/navigation" />

    <TextView
        android:layout_width="318dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_humber_campus_navigation"
        android:textAppearance="@android:style/TextAppearance.Material.Display1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="114dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="95dp"
        android:layout_marginStart="118dp"
        android:text="@string/quit" />

    <Button
        android:id="@+id/CallSecurity"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="212dp"
        android:layout_marginStart="74dp"
        android:text="@string/call_security" />

</RelativeLayout>
